SubBox/wwwroot/css/index.css
/* ... */
    .channelEntryArrow .material-icons {
        color: var(--font_title);
        font-size: 44px;
    }

    .channelEntryArrow:hover .channelEntryPane {
        display: flex;
    }

.channelEntryPane {
    display: none;
    position: absolute;
    left: 401px;
    width: 200px;
    height: auto;
    background: var(--bg_t);
    backdrop-filter: blur(20px);
    color: var(--font_title);
    outline: 1px solid var(--video_bd_bot);
}

    .channelEntryPane:hover {
        display: flex;
    }

    .channelEntryPane img {
        border-radius: 100%;
    }

.channelEntryPaneLocked {
    border: 1px solid var(--mainColor);
}

.channelEntryPaneList {
    padding: 10px 0 10px 0;
    display: flex;
    flex-direction: column;
    width: 100%;
}

    .channelEntryPaneList p {
        display: flex;
        justify-content: center;
    }

.channelEntryPaneListEntry {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 5px 10px 5px 10px;
    min-height: 20px;
    border-top: 1px solid transparent;
    border-bottom: 1px solid transparent;
}

    .channelEntryPaneListEntry .material-icons {
        display: flex;
        align-items: center;
        justify-content: center;
        font-size: 22px;
        margin: 0 5px 0 0;
    }

.channelEntryPaneListEntryStatistic {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    width: 50%;
    height: 100%;
}

.channelEntryPaneListEntryButton {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
    font-size: 16px;
    height: 25px;
}

.channelEntryPaneListEntryHover:hover {
    background: var(--highlight_t);
    border-top: 1px solid var(--video_bd_bot);
    border-bottom: 1px solid var(--video_bd_bot);
    box-shadow: 0 0 10px -8px var(--font_title);
}

.channelPageNavigation {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 30px;
}

    .channelPageNavigation div {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 33%;
    }

    .channelPageNavigation:hover {
        background: var(--highlight_t);
    }

    .channelPageNavigation label {
        color: var(--font_title);
    }

.channelPageNavigationButton {
    width: 60px;
    font-size: 30px;
    padding: 0;
    margin: 0;
}

    .channelPageNavigationButton:hover {
        background: var(--mainColor);
        color: var(--secColor);
        border: 1px solid var(--video_bd_bot);
        box-shadow: 0 0 10px -8px var(--font_title);
    }

.channelLastRowDiv {
    padding: 10px 5px 0px 10px;
    display: flex;
    flex-direction: row;
    border-top: 1px solid var(--font_text);
    margin-top: 10px;
}

    .channelLastRowDiv input {
        width: 310px;
        height: 20px;
        margin: 0;
    }

    .channelLastRowDiv div {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: flex-end;
        width: auto;
        flex: 1 1 auto;
    }

.addChannelButton {
    border-radius: 0;
    width: 30px;
    height: 30px;
    margin: 0;
    padding: 0;
    border: 1px solid var(--font_text);
    color: var(--font_title);
    background-color: transparent;
}

    .addChannelButton:hover {
        color: var(--secColor);
        background-color: var(--mainColor);
    }

.listList {
    margin-left: auto;
    margin-right: auto;
    width: 60%;
}

.spacer {
    display: flex;
    width: 100%;
    margin-top: 40px;
    height: 30px;
}

.videoBox:hover .listButton {
    color: var(--font_title);
}

.listButton {
    border-radius: 0;
    padding: 3px;
    color: transparent;
    background-color: transparent;
    border: 1px solid transparent;
}

    .listButton:hover {
        background: var(--mainColor);
        color: var(--secColor) !important;
        box-shadow: 0 0 10px -8px var(--font_title);
    }

.inputList {
    display: flex;
    align-items: center;
    height: 100%;
}

.inputListOverlay {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    position: fixed;
    top: 40px;
    left: 0;
    width: 900px;
    height: auto;
    padding: 0;
    background-color: var(--nav_bg_t);
    backdrop-filter: blur(20px);
    z-index: 500;
    border: 1px solid var(--video_bd_bot);
    border-left: none;
    border-top: none;
    box-shadow: 5px 5px 10px -8px rgba(0, 0, 0, .2);
    overflow-y: hidden;
    overflow-x: hidden;
}

    .inputListOverlay input{
        width: 50%;
    }

    .inputListOverlay button {
        background-color: var(--nav_bg);
        margin-right: 15px;
    }

.playlistUIMainDiv {
    display: flex;
    width: 100%;
    flex-direction: column;
}

    .playlistUIMainDiv img {
        width: 246px;
        height: 138px;
    }

    .playlistUIMainDiv p {
        
        width: 236px;
        margin: 10px 0 10px;
        padding: 0 5px 0 5px;
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
    }

    .playlistUIMainDiv .playlistUIUpperDiv {
        z-index: 2;
        display: inline-grid;
        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
        grid-auto-rows: 200px;
        grid-gap: 10px;
        align-items: start;
        align-content: start;
        justify-items: center;
        width: 860px;
        border-bottom: 1px solid var(--font_text);
        padding: 20px;
    }

        .playlistUIMainDiv .playlistUIUpperDiv .playlistUIListEntry {
            width: 246px;
            height: 176px;
            padding: 0;
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: flex-start;
            border: 2px solid transparent;
            cursor: default;
            background: var(--nav_bg);
            box-shadow: 0 0 5px 0 rgba(0,0,0);
        }
/* ... */

